ui수정 svg개선중

--- a/src/main/resources/templates/excelList.html
+++ b/src/main/resources/templates/excelList.html
@@ -5,124 +5,161 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="https://code.jquery.com/jquery-1.11.2.min.js"></script>
-<!--    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">-->
-    <style>
-        .button {
-          border: none;
-          color: white;
-          padding: 15px 32px;
-          text-align: center;
-          text-decoration: none;
-          display: inline-block;
-          font-size: 16px;
-          margin: 4px 2px;
-          cursor: pointer;
-        }
-    </style>
+    <link rel="stylesheet" th:href="@{/css/style.css}">
+
 </head>
 <body>
+    <div id="container">
+        <div id="header">
+            <h1>Mapping program</h1>
+        </div>
 
-    <div style = "width:35%; float:left; padding:20px;" >
-        <table class="table table-bordered" id="table1" >
-            <thead>
-            <tr>
-                <th scope="col">번호</th>
-                <th scope="col">영문필드명</th>
-                <th scope="col">한글필드명</th>
-                <th scope="col">길이</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="data : ${data1}" >
-                <td scope="row" th:text="${data.no}"></td>
-                <td th:text="${data.english_field}"></td>
-                <td th:text="${data.korean_field}"></td>
-                <td th:text="${data.length}"></td>
-            </tr>
-            </tbody>
-        </table>
-        <br>
-        <table class="table table-bordered" id="table2" style="visibility:hidden">
-            <thead>
-            <tr>
-                <th scope="col">번호</th>
-                <th scope="col">영문필드명</th>
-                <th scope="col">한글필드명</th>
-                <th scope="col">길이</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="data : ${commonData1}" >
-                <td scope="row" th:text="${data.no}"></td>
-                <td th:text="${data.english_field}"></td>
-                <td th:text="${data.korean_field}"></td>
-                <td th:text="${data.length}"></td>
-            </tr>
-            <tr th:each="data : ${remain1}" >
-                <td scope="row" th:text="${data.no}"></td>
-                <td th:text="${data.english_field}"></td>
-                <td th:text="${data.korean_field}"></td>
-                <td th:text="${data.length}"></td>
-            </tr>
-            </tbody>
-        </table>
-        <div class="col-lg-12" id="ex1_Result1" ></div>
-        <div id = "test" style="width:100px; height:30px;"></div>
-    </div>
-    <svg><line style="width:50%" id ="line" stroke="red" stroke-width="3"></line></svg>
-<!--    <canvas id="canvas" style="width:30%;height:500px;border: 1px solid"></canvas>-->
-    <div style = "width:35%; float:right; padding:20px">
-        <table class="table table-bordered" id="table3">
-            <thead>
-            <tr>
-                <th scope="col">번호</th>
-                <th scope="col">영문필드명</th>
-                <th scope="col">한글필드명</th>
-                <th scope="col">길이</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="data : ${data2}" >
-                <td scope="row" th:text="${data.no}"></td>
-                <td th:text="${data.english_field}"></td>
-                <td th:text="${data.korean_field}"></td>
-                <td th:text="${data.length}"></td>
-            </tr>
-            </tbody>
-        </table>
-        <br>
+        <div id="sidebar-left">
+            <table class="table" id="table1" >
+                <colgroup >
+                    <col width="48px"/>
+                    <col width="96px"/>
+                    <col width="282px"/>
+                    <col width="48px"/>
+                </colgroup>
+                <thead>
+                <tr>
+                    <th scope="col">번호</th>
+                    <th scope="col">영문필드명</th>
+                    <th scope="col">한글필드명</th>
+                    <th scope="col">길이</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="data : ${data1}" >
+                    <td scope="row" th:text="${data.no}"></td>
+                    <td th:text="${data.english_field}"></td>
+                    <td th:text="${data.korean_field}"></td>
+                    <td th:text="${data.length}"></td>
+                </tr>
+                </tbody>
+            </table>
+            <br>
+            <ul class="col-lg-12" id="ex1_Result1" ></ul>
+            <ul id = "test" style="width:100px; height:30px;"></ul>
+        </div> <!-- side left-->
 
-        <br>
-        <table class="table table-bordered" id="table4" style="visibility:hidden">
-            <thead>
-            <tr>
-                <th scope="col">번호</th>
-                <th scope="col">영문필드명</th>
-                <th scope="col">한글필드명</th>
-                <th scope="col">길이</th>
-            </tr>
-            </thead>
-            <tbody>
-            <tr th:each="data : ${commonData2}" >
-                <td scope="row" th:text="${data.no}"></td>
-                <td th:text="${data.english_field}"></td>
-                <td th:text="${data.korean_field}"></td>
-                <td th:text="${data.length}"></td>
-            </tr>
-            <tr th:each="data : ${remain2}" >
-                <td scope="row" th:text="${data.no}"></td>
-                <td th:text="${data.english_field}"></td>
-                <td th:text="${data.korean_field}"></td>
-                <td th:text="${data.length}"></td>
-            </tr>
-            </tbody>
-        </table>
-        <input type = "button" id="mapping" value="매핑" onclick="drawLine()" style = "width:20%; float:right;"/>
-        <input type = "button" id="automapping" value="자동매핑" onclick="visibleTable()" style = "width:20%; float:right;"/>
-        <div class="col-lg-12" id="ex1_Result2" ></div>
+<!--        <div id="draw" >-->
+            <svg>
+<!--            <svg width="438px" height="400px" >-->
+                <line id ="line" style="width:438px; height:400px;" stroke="red" stroke-width="3" ></line>
+            </svg>
+<!--        </div> &lt;!&ndash; draw &ndash;&gt;-->
 
-        <div id = "test2" style="width:100px; height:30px;"></div>
-    </div>
+        <div id="sidebar-right">
+            <table class="table" id="table3">
+                <colgroup >
+                    <col width="48px"/>
+                    <col width="96px"/>
+                    <col width="282px"/>
+                    <col width="48px"/>
+                </colgroup>
+                <thead>
+                <tr>
+                    <th scope="col">번호</th>
+                    <th scope="col">영문필드명</th>
+                    <th scope="col">한글필드명</th>
+                    <th scope="col">길이</th>
+                </tr>
+                </thead>
+                <tbody>
+                <tr th:each="data : ${data2}" >
+                    <td scope="row" th:text="${data.no}"></td>
+                    <td th:text="${data.english_field}"></td>
+                    <td th:text="${data.korean_field}"></td>
+                    <td th:text="${data.length}"></td>
+                </tr>
+                </tbody>
+            </table>
+            <br>
+
+            <input type = "button" id="mapping" value="매핑" onclick="drawLine()" style = "width:20%; float:right;"/>
+            <input type = "button" id="automapping" value="자동매핑" onclick="visibleTable()" style = "width:20%; float:right;"/>
+
+            <ul class="col-lg-12" id="ex1_Result2" ></ul>
+            <ul id = "test2" style="width:100px; height:30px;"></ul>
+        </div> <!-- side right-->
+
+        <div id="footer">
+            <h1>Mapping Result</h1>
+        </div>
+            <span id="footer-sidebar-left">
+                <table class="table" id="table2" style="visibility:hidden;">
+                    <colgroup >
+                        <col width="48px"/>
+                        <col width="96px"/>
+                        <col width="282px"/>
+                        <col width="48px"/>
+                    </colgroup>
+                    <thead>
+                    <tr>
+                        <th scope="col">번호</th>
+                        <th scope="col">영문필드명</th>
+                        <th scope="col">한글필드명</th>
+                        <th scope="col">길이</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="data : ${commonData1}" >
+                        <td scope="row" th:text="${data.no}"></td>
+                        <td th:text="${data.english_field}"></td>
+                        <td th:text="${data.korean_field}"></td>
+                        <td th:text="${data.length}"></td>
+                    </tr>
+                    <tr th:each="data : ${remain1}" >
+                        <td scope="row" th:text="${data.no}"></td>
+                        <td th:text="${data.english_field}"></td>
+                        <td th:text="${data.korean_field}"></td>
+                        <td th:text="${data.length}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </span>
+
+            <span id="footer-sidebar-right">
+                <table class="table" id="table4" style="visibility:hidden;">
+                    <colgroup >
+                        <col width="48px"/>
+                        <col width="96px"/>
+                        <col width="282px"/>
+                        <col width="48px"/>
+                    </colgroup>
+                    <thead>
+                    <tr>
+                        <th scope="col">번호</th>
+                        <th scope="col">영문필드명</th>
+                        <th scope="col">한글필드명</th>
+                        <th scope="col">길이</th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="data : ${commonData2}" >
+                        <td scope="row" th:text="${data.no}"></td>
+                        <td th:text="${data.english_field}"></td>
+                        <td th:text="${data.korean_field}"></td>
+                        <td th:text="${data.length}"></td>
+                    </tr>
+                    <tr th:each="data : ${remain2}" >
+                        <td scope="row" th:text="${data.no}"></td>
+                        <td th:text="${data.english_field}"></td>
+                        <td th:text="${data.korean_field}"></td>
+                        <td th:text="${data.length}"></td>
+                    </tr>
+                    </tbody>
+                </table>
+            </span>
+
+    </div> <!--    container   -->
+
+
+
+
+
 
 </body>
 </html>
@@ -133,6 +170,14 @@
         var y1;
         var x2;
         var y2;
+        $("#draw").click(function(e){
+			x1 = e.pageX;
+			y1 = e.pageY;
+
+			var test = x1+" "+ y1;
+            document.getElementById("test3").innerHTML = test;
+
+		});
     // 테이블의 Row 클릭시 값 가져오기
 		$("#table1 tr").click(function(e){
 
@@ -203,11 +248,19 @@
         table4.style.visibility="visible";
     }
     function drawLine(){
-        line
-        .attr('x1', x1)
-        .attr('y1', y1)
-        .attr('x2', x2)
-        .attr('y2', y2)
+
+<!--            line-->
+<!--                .attr('x1', 625)-->
+<!--                .attr('y1',y1)-->
+<!--                .attr('x2',1050)-->
+<!--                .attr('y2',y2)-->
+
+            var line = document.getElementById('line')
+            line.x1.baseVal.value = 625;
+            line.y1.baseVal.value = y1;
+            line.x2.baseVal.value = 1050;
+            line.y2.baseVal.value = y2;
+            console.log(line);
     }
 
 </script>
