--- a/src/main/resources/static/css/style.css
+++ b/src/main/resources/static/css/style.css
@@ -55,14 +55,14 @@
             width: 480px;
             margin-bottom: 20px;
             float: left;
-
+            border: 1px solid #bcbcbc;
           }
           #draw {
             position: absolute;
             width: 438px;
             height: 400px;
             margin-bottom: 20px;
-            float: left;
+            float: center;
             border: 1px solid #bcbcbc;
           }
 
@@ -70,7 +70,7 @@
             width: 480px;
             margin-bottom: 20px;
             float: right;
-
+            border: 1px solid #bcbcbc;
           }
           #footer {
             clear: both;
